[build-system]
requires = ["flit_core >=2,<4", "setuptools>=42", "wheel"]
# build-backend = "flit_core.buildapi"
build-backend = "setuptools.build_meta"

[tool.flit.metadata]
module = "smoothfit"
author = "Nico Schlömer"
author-email = "something@gmail.com"
home-page = "https://github.com/nschloe/smoothfit"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"

