[metadata]
name = smoothfit
version = 0.2.1
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Smooth data fitting in N dimensions
url = https://github.com/nschloe/smoothfit
project_urls =
    Code=https://github.com/nschloe/smoothfit
    Issues=https://github.com/nschloe/smoothfit/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    pykry
    numpy
    scipy
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
