[metadata]
name = smoothfit
version = 0.3.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Smooth data fitting in N dimensions
url = https://github.com/nschloe/smoothfit
project_urls =
    Code=https://github.com/nschloe/smoothfit
    Issues=https://github.com/nschloe/smoothfit/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    pykry
    numpy
    scikit-fem >= 3.0.0
    scipy
python_requires = >=3.7

[options.packages.find]
where=src
